--- a/ui/portal/.github/.copilot-instructions.md
+++ b/ui/portal/.github/.copilot-instructions.md
@@ -5,9 +5,7 @@
 ---
 
 ## 🎯 Scope
-- Implement the **web UI** in `apps/web` (Next.js 15 App Router, TypeScript, Tailwind).
-- Use **mock data** under `apps/web/data` and **pure functions** in `data/mockService.ts`.
-- **Do not** add `fetch()` calls, API routes, database code, or server dependencies.
+- Implement the **web UI** in `apps/web` (Next.js 15 App Router, TypeScript, Tailwind, DaisyUI, FontAwesome (inline)).
 
 ---
 
@@ -36,13 +34,6 @@ stumbleable/
       │  ├─ KeyboardShortcuts.tsx
       │  ├─ Toaster.tsx
       │  └─ EmptyState.tsx
-      ├─ data/
-      │  ├─ types.ts
-      │  ├─ topics.ts
-      │  ├─ sources.ts
-      │  ├─ users.ts
-      │  ├─ interactions.ts
-      │  └─ mockService.ts
       ├─ lib/
       │  ├─ score.ts
       │  └─ utils.ts
@@ -58,57 +49,6 @@ stumbleable/
 - Theme via **CSS variables** in `app/themes/*.css` (no Tailwind theme plugin). Tokens: `--color-primary`, `--color-secondary`, `--color-base-100`, `--color-base-content`.
 - Icons: **lucide-react** or inline SVG. Keep bundle light.
 - Accessibility: keyboard-first controls, ARIA labels, visible focus rings.
-
----
-
-## 🗄️ Data & Mock Service
-**All UI reads/writes go through these modules. No network calls.**
-
-### `data/types.ts`
-```ts
-export type Topic = { id: string; name: string };
-export type Discovery = {
-  id: string; url: string; title: string;
-  description?: string; image?: string; domain: string;
-  topics: string[]; readingTime?: number; createdAt?: string; quality?: number;
-};
-export type Interaction = { id: string; discoveryId: string; action: 'up'|'down'|'save'|'skip'|'share'; at: number };
-```
-
-### `data/topics.ts`
-- Export ~30 topics (arts, crafts, design, music, indie web, photography, science, code, DIY, philosophy, games, history, nature, etc.).
-
-### `data/sources.ts`
-- Export 40–60 `Discovery` items with diverse topics.
-- Use hero placeholders like `https://picsum.photos/seed/<id>/1200/630`.
-- Randomize `createdAt` (last 365 days) and `quality` (0.3–0.95).
-
-### `data/users.ts`
-- Export `currentUser` with preferred topic ids and default `wildness` (0–100).
-
-### `data/interactions.ts`
-- In-memory array and helpers: `logInteraction(i)`, `getInteractions()`; plus a map per discovery `{ up:number, down:number, saved:boolean }`.
-
-### `lib/score.ts`
-```ts
-export const freshness = (ageDays:number)=> Math.exp(-Math.log(2)*ageDays/14);
-export const similarity = (userTopics:string[], itemTopics:string[]) => {
-  const overlap = itemTopics.filter(t=>userTopics.includes(t)).length;
-  return 0.5 + 0.5 * Math.min(1, overlap/3);
-};
-```
-
-### `data/mockService.ts`
-```ts
-import { Discovery } from './types'
-export function getNextDiscovery(opts:{ wildness:number; seenIds:Set<string> }): Discovery
-export function recordFeedback(id:string, action:'up'|'down'|'save'|'skip'|'share'): void
-export function getSaved(): Discovery[]
-```
-**Behavior**
-- Candidate set = items not in `seenIds`.
-- Score = `quality * freshness * similarity`; add exploration probability proportional to `wildness`.
-- `recordFeedback` updates in-memory stats and saves; `getSaved` returns newest first.
 
 ---
 
@@ -133,7 +73,7 @@ export function getSaved(): Discovery[]
 ## 🧱 Components
 - **Header**: sticky, nav (Stumble, Lists, Saved, About), active state.
 - **StumbleButton**: prominent, includes keyboard hint ("Space").
-- **DiscoveryCard**: image (aspect-video), domain chip, title → external link, optional description, topic tags, read time, tiny “Why you’re seeing this” line (mocked).
+- **DiscoveryCard**: image (aspect-video), domain chip, title → external link, optional description, topic tags, read time, tiny “Why you’re seeing this” line.
 - **ReactionBar**: buttons with icons; call service + toast.
 - **WildnessControl**: slider with numeric label.
 - **KeyboardShortcuts**: binds keys + popover/tooltip legend.
@@ -151,11 +91,10 @@ export function getSaved(): Discovery[]
 
 ## ✅ Acceptance Criteria
 1. `npm run dev` serves routes: `/`, `/stumble`, `/saved`, `/lists`, `/about`.
-2. `/stumble` shows a card from mock data; **Space** or **Stumble** advances to a new item; no repeats until pool is exhausted.
+2. `/stumble` loads site/page into iframe; **Space** or **Stumble** advances to a new item; no repeats until pool is exhausted.
 3. Like/Skip/Save/Share update in-memory state; **Saved** reflects changes.
 4. **Wildness** meaningfully changes selection (verify by console logging selection reasons).
 5. Keyboard shortcuts work and are discoverable via a small legend.
-6. No network calls; all data flows through `data/mockService.ts`.
 7. Responsive layout and basic a11y (landmarks, focus, labels).
 
 ---
@@ -176,7 +115,6 @@ export function getSaved(): Discovery[]
 
 ## 📝 Notes for Copilot
 - Prefer creating **actual files** under the structure above.
-- Keep mocks human and diverse; avoid lorem ipsum titles.
 - Keep functions small and typed; add JSDoc on exported functions.
 - If uncertain between multiple approaches, favor the one with **fewest dependencies** and **easiest to swap** later.
 
