--- a/mobile/stumbleable-app/.copilot-instructions.md
+++ b/mobile/stumbleable-app/.copilot-instructions.md
@@ -20,7 +20,7 @@
 ## 📁 Mobile App Structure
 
 ```
-mobile/expo/
+mobile/stumbleable-app/
 ├── app/                           # Expo Router file-based routing
 │   ├── (tabs)/                   # Tab navigation layout
 │   │   ├── stumble.tsx           # Main discovery screen
@@ -68,6 +68,7 @@ mobile/expo/
 │   ├── images/                 # App images and icons
 │   ├── fonts/                  # Custom fonts
 │   └── sounds/                 # Haptic/audio feedback
+├── App.tsx                     # Root component (for now)
 ├── app.config.ts               # Expo configuration
 ├── package.json               # Dependencies and scripts
 ├── tsconfig.json              # TypeScript configuration
@@ -80,7 +81,7 @@ mobile/expo/
 ## 🧰 Mobile Tech Stack
 
 ### Core Framework
-- **Expo SDK 50+** with managed workflow
+- **Expo SDK 54+** with managed workflow
 - **React Native** with TypeScript strict mode
 - **Expo Router** for file-based navigation
 - **Expo Dev Client** for custom native code
@@ -119,18 +120,18 @@ mobile/expo/
 // Use same color system as web but adapted for mobile
 export const Colors = {
   light: {
-    primary: '#6366f1',        // Indigo-500
-    secondary: '#8b5cf6',      // Violet-500
-    background: '#ffffff',      // White
-    surface: '#f8fafc',        // Slate-50
+    primary: '#FF4D6D',        // Indigo-500
+    secondary: '#00C49A',      // Violet-500
+    background: '#FFFDF7',      // White
+    surface: '#FFFDF7',        // Slate-50
     text: '#0f172a',           // Slate-900
     textSecondary: '#64748b',  // Slate-500
   },
   dark: {
-    primary: '#818cf8',        // Indigo-400
-    secondary: '#a78bfa',      // Violet-400
-    background: '#0f172a',     // Slate-900
-    surface: '#1e293b',       // Slate-800
+    primary: '#FF4D6D',        // Indigo-400
+    secondary: '#00E6B3',      // Violet-400
+    background: '#131820',     // Slate-900
+    surface: '#0B0D10',       // Slate-800
     text: '#f8fafc',          // Slate-50
     textSecondary: '#94a3b8',  // Slate-400
   },
@@ -218,21 +219,6 @@ export class DiscoveryAPI {
 }
 ```
 
-### Environment Configuration
-```typescript
-// app.config.ts
-export default {
-  expo: {
-    extra: {
-      discoveryApiUrl: process.env.EXPO_PUBLIC_DISCOVERY_API_URL,
-      interactionApiUrl: process.env.EXPO_PUBLIC_INTERACTION_API_URL,
-      userApiUrl: process.env.EXPO_PUBLIC_USER_API_URL,
-      clerkPublishableKey: process.env.EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY,
-    },
-  },
-};
-```
-
 ---
 
 ## 📱 Mobile UX Patterns
@@ -281,224 +267,35 @@ export const HapticFeedback = {
 // - Selection: Slider adjustments, picker changes
 ```
 
-### Screen Layout Patterns
-```typescript
-// Standard screen components structure
-const StumbleScreen = () => {
-  return (
-    <SafeAreaView style={styles.container}>
-      {/* Fixed header with minimal chrome */}
-      <Header />
-      
-      {/* Main content area - full screen card */}
-      <ScrollView contentContainerStyle={styles.content}>
-        <StumbleCard discovery={currentDiscovery} />
-      </ScrollView>
-      
-      {/* Fixed bottom bar with reactions */}
-      <View style={styles.bottomBar}>
-        <ReactionBar />
-        <WildnessSlider />
-      </View>
-      
-      {/* Floating action button */}
-      <TouchableOpacity style={styles.stumbleButton}>
-        <StumbleButton />
-      </TouchableOpacity>
-    </SafeAreaView>
-  );
-};
-```
-
 ---
 
-## 🔐 Authentication Integration
+## 🚀 Development Workflow
 
-### Clerk Setup
-```typescript
-// app/_layout.tsx
-import { ClerkProvider } from '@clerk/clerk-expo';
-import Constants from 'expo-constants';
+### Getting Started
+```bash
+# Navigate to mobile directory
+cd mobile/stumbleable-app
 
-export default function RootLayout() {
-  return (
-    <ClerkProvider 
-      publishableKey={Constants.expoConfig?.extra?.clerkPublishableKey!}
-      tokenCache={tokenCache} // SecureStore integration
-    >
-      <NavigationContainer>
-        <RootNavigator />
-      </NavigationContainer>
-    </ClerkProvider>
-  );
-}
+# Install dependencies
+npm install
+
+# Start development server
+npm start
+
+# Run on iOS simulator
+npm run ios
+
+# Run on Android emulator  
+npm run android
 ```
 
-### Token Storage
-```typescript
-// lib/auth.ts
-import * as SecureStore from 'expo-secure-store';
-
-export const tokenCache = {
-  async getToken(key: string) {
-    try {
-      return SecureStore.getItemAsync(key);
-    } catch (err) {
-      return null;
-    }
-  },
-  async saveToken(key: string, value: string) {
-    try {
-      return SecureStore.setItemAsync(key, value);
-    } catch (err) {
-      return;
-    }
-  },
-};
-```
-
----
-
-## 📊 Performance Guidelines
-
-### React Native Performance
-```typescript
-// Use React.memo for expensive components
-export const StumbleCard = React.memo(({ discovery }: Props) => {
-  return (
-    <View style={styles.card}>
-      {/* Component content */}
-    </View>
-  );
-});
-
-// Use useMemo for expensive calculations
-const processedDiscoveries = useMemo(() => {
-  return discoveries.map(processDiscovery);
-}, [discoveries]);
-
-// Use useCallback for event handlers
-const handleLike = useCallback(() => {
-  HapticFeedback.light();
-  onLike(discovery.id);
-}, [discovery.id, onLike]);
-```
-
-### Image Optimization
-```typescript
-// Use Expo Image for better performance
-import { Image } from 'expo-image';
-
-<Image
-  source={{ uri: discovery.imageUrl }}
-  style={styles.image}
-  contentFit="cover"
-  transition={200}
-  recyclingKey={discovery.id} // For FlatList optimization
-/>
-```
-
-### Memory Management
-```typescript
-// Limit discovery cache size
-const MAX_CACHED_DISCOVERIES = 50;
-
-// Use FlatList for large lists with proper optimization
-<FlatList
-  data={discoveries}
-  keyExtractor={(item) => item.id}
-  getItemLayout={getItemLayout} // If fixed height
-  removeClippedSubviews={true}
-  maxToRenderPerBatch={5}
-  windowSize={10}
-  initialNumToRender={3}
-/>
-```
-
----
-
-## 🎯 Mobile-Specific Features
-
-### Push Notifications
-```typescript
-// lib/notifications.ts
-import * as Notifications from 'expo-notifications';
-
-// Configure notification behavior
-Notifications.setNotificationHandler({
-  handleNotification: async () => ({
-    shouldShowAlert: true,
-    shouldPlaySound: false,
-    shouldSetBadge: false,
-  }),
-});
-
-// Register for push notifications
-export async function registerForPushNotificationsAsync() {
-  const { status: existingStatus } = await Notifications.getPermissionsAsync();
-  let finalStatus = existingStatus;
-  
-  if (existingStatus !== 'granted') {
-    const { status } = await Notifications.requestPermissionsAsync();
-    finalStatus = status;
-  }
-  
-  if (finalStatus !== 'granted') {
-    alert('Failed to get push token for push notification!');
-    return;
-  }
-  
-  const token = (await Notifications.getExpoPushTokenAsync()).data;
-  return token;
-}
-```
-
-### Deep Linking
-```typescript
-// app.config.ts - Configure deep links
-export default {
-  expo: {
-    scheme: 'stumbleable',
-    web: {
-      linking: {
-        prefixes: ['https://stumbleable.com', 'stumbleable://'],
-        config: {
-          screens: {
-            '(tabs)': {
-              screens: {
-                stumble: 'stumble',
-                saved: 'saved',
-                lists: 'lists',
-              },
-            },
-            'discovery/[id]': 'discovery/:id',
-            'lists/[id]': 'lists/:id',
-          },
-        },
-      },
-    },
-  },
-};
-```
-
-### Native Sharing
-```typescript
-// lib/sharing.ts
-import * as Sharing from 'expo-sharing';
-
-export const shareDiscovery = async (discovery: Discovery) => {
-  try {
-    const url = `https://stumbleable.com/discovery/${discovery.id}`;
-    const message = `Check out this discovery: ${discovery.title}`;
-    
-    await Sharing.shareAsync(url, {
-      dialogTitle: message,
-      mimeType: 'text/plain',
-    });
-  } catch (error) {
-    console.error('Error sharing:', error);
-  }
-};
+### Environment Setup
+```bash
+# Required environment variables (.env)
+EXPO_PUBLIC_DISCOVERY_API_URL=http://localhost:7001/api
+EXPO_PUBLIC_INTERACTION_API_URL=http://localhost:7002/api
+EXPO_PUBLIC_USER_API_URL=http://localhost:7003/api
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
 ```
 
 ---
@@ -523,170 +320,6 @@ export const shareDiscovery = async (discovery: Discovery) => {
 2. **❌ Missing error handling**: Handle network failures gracefully
 3. **❌ No offline fallbacks**: Show appropriate UI when disconnected
 4. **❌ Blocking UI**: Show loading states during API calls
-
-### Expo Specific
-1. **❌ Missing expo-dev-client**: Required for custom native code
-2. **❌ Wrong SDK version**: Keep Expo SDK and dependencies compatible
-3. **❌ Bundle size issues**: Analyze and optimize bundle size regularly
-4. **❌ Build configuration**: Proper EAS Build configuration for stores
-
----
-
-## 🧪 Testing Strategy
-
-### Unit Testing
-```typescript
-// Use Jest and React Native Testing Library
-import { render, fireEvent } from '@testing-library/react-native';
-import { StumbleCard } from '../StumbleCard';
-
-test('renders discovery title', () => {
-  const discovery = { id: '1', title: 'Test Discovery' };
-  const { getByText } = render(<StumbleCard discovery={discovery} />);
-  expect(getByText('Test Discovery')).toBeTruthy();
-});
-```
-
-### E2E Testing
-```typescript
-// Use Maestro for E2E tests
-# flows/stumble-flow.yaml
-appId: com.stumbleable.mobile
----
-- launchApp
-- tapOn: "Start Stumbling"
-- assertVisible: "Discovery Card"
-- swipe:
-    direction: RIGHT
-- assertVisible: "Next Discovery"
-```
-
-### Performance Testing
-```typescript
-// Use Flipper for performance profiling
-// Monitor:
-// - JS thread usage
-// - Native thread usage  
-// - Memory allocation
-// - Network requests
-```
-
----
-
-## 📦 Dependencies & Scripts
-
-### Required Dependencies
-```json
-{
-  "dependencies": {
-    "expo": "~50.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.0",
-    "@clerk/clerk-expo": "^1.0.0",
-    "@tanstack/react-query": "^5.0.0",
-    "zustand": "^4.0.0",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "expo-router": "~3.4.0",
-    "expo-haptics": "~12.8.0",
-    "expo-notifications": "~0.27.0",
-    "expo-web-browser": "~12.8.0",
-    "expo-sharing": "~11.10.0",
-    "expo-secure-store": "~12.9.0",
-    "expo-constants": "~15.4.0",
-    "expo-image": "~1.10.0"
-  }
-}
-```
-
-### Scripts
-```json
-{
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios", 
-    "web": "expo start --web",
-    "build": "eas build",
-    "submit": "eas submit",
-    "test": "jest",
-    "test:e2e": "maestro test flows/",
-    "lint": "eslint .",
-    "type-check": "tsc --noEmit"
-  }
-}
-```
-
----
-
-## 🚀 Development Workflow
-
-### Getting Started
-```bash
-# Navigate to mobile directory
-cd mobile/expo
-
-# Install dependencies
-npm install
-
-# Start development server
-npm start
-
-# Run on iOS simulator
-npm run ios
-
-# Run on Android emulator  
-npm run android
-```
-
-### Environment Setup
-```bash
-# Required environment variables (.env)
-EXPO_PUBLIC_DISCOVERY_API_URL=http://localhost:7001/api
-EXPO_PUBLIC_INTERACTION_API_URL=http://localhost:7002/api
-EXPO_PUBLIC_USER_API_URL=http://localhost:7003/api
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
-```
-
-### Build & Deploy
-```bash
-# Build for app stores
-eas build --platform all
-
-# Submit to stores
-eas submit --platform ios
-eas submit --platform android
-
-# Preview build
-eas build --profile preview
-```
-
----
-
-## ✅ Mobile Development Checklist
-
-### Before Development
-- [ ] Expo CLI and EAS CLI installed
-- [ ] iOS Simulator / Android Emulator set up
-- [ ] Physical devices available for testing
-- [ ] Backend services running (discovery, interaction, user)
-- [ ] Environment variables configured
-
-### During Development  
-- [ ] Test on both iOS and Android regularly
-- [ ] Check performance with Flipper
-- [ ] Verify haptic feedback works
-- [ ] Test gesture interactions
-- [ ] Validate API error handling
-- [ ] Check offline behavior
-
-### Before Release
-- [ ] App store assets prepared (icons, screenshots)
-- [ ] Privacy policy and terms updated
-- [ ] Push notification setup complete
-- [ ] Deep linking tested
-- [ ] Performance benchmarks met
-- [ ] Accessibility tested (VoiceOver, TalkBack)
 
 ---
 
